<resources>
    <string name="app_name">Fit Droid</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_success">Welcome!</string>
    <string name="user_name">jdoe</string>
    <string name="user_password">welcome1</string>

    <string name="logged_in_label">Logged In:</string>


    <!-- generic button strings -->
    <string name="action_btn_create">Create</string>
    <string name="action_btn_cancel">Cancel</string>
    <string name="action_btn_update">Update</string>

    <!-- strings related to sessions -->
    <string name="session_customer_select_label">Customer:</string>
    <string name="session_calendar_select_label">Session Date:</string>
    <string name="session_time_select_label">Session Time:</string>
    <string name="session_pay_now_label">Pay Now</string>
    <string name="session_location_label">Location:</string>
    <string name="session_notes_label">Notes</string>
    <string name="session_status_label">Status</string>
    <string name="session_choose_date">Select Date</string>
    <string name="session_choose_time">Select Time</string>
    <string name="session_pay_btn_label">Pay Now</string>
    <string name="session_complete">Complete</string>
    <string name="session_incomplete">Incomplete</string>
    <string name="session_paid">Paid</string>
    <string name="session_unpaid">Unpaid</string>
    <string name="title_activity_customer_pager">CustomerPagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- customer tab strings -->
    <string name="customer_tab_info_label">Information</string>
    <string name="customer_tab_sessions_label">Sessions</string>
    <string name="customer_tab_billing_label">Billing</string>

    <string name="date_picker_title">Select Session Date</string>
    <string name="time_picker_title">Select Session Time</string>

    <string name="action_drawer_open"></string>
    <string name="action_drawer_close"></string>
    <string name="title_activity_test">Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logout_message">Logging Out</string>

    <string name="save_success">Saved Successfully!</string>
    <string name="save_failure">Save Failed!</string>

    <string name="photo_permission_denied">Photo permission denied.  Unable to take photo.</string>

    <string name="email_default_subject">A Note from Your Trainer</string>
</resources>
